# ragops

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  compose.yaml  design-qa.md  pyproject.toml  ragops.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  design-partner.yml  evaluator.yml  feature.yml
.github/workflows/: ci.yml  nightly.yml  pages.yml  publish-pypi.yml  ragops-gate.yml  (+5 more)
apps/: __init__.py  github_pr_comment.py
docs/: README.md  getting-started.md
examples/: __init__.py
schemas/: attack-pack-0.1.schema.json  baseline-manifest-0.1.schema.json  evaluator-drift-report-0.1.schema.json  external-metrics-0.1.schema.json  pilot-economics-0.1.schema.json  pilot-manifest-0.1.schema.json  pilot-observation-0.1.schema.json  provenance-diagnosis-0.1.schema.json  repeated-run-plan-0.1.schema.json  replay-bundle-0.1.schema.json  report-0.2.schema.json  response-fixture-0.2.schema.json  responses-0.1.schema.json  scenario-0.1.schema.json  scenario-0.2.schema.json  sequential-report-0.1.schema.json  statistical-report-0.1.schema.json  trace-0.3.schema.json  trace-0.4.schema.json
scripts/: local_release.py  record_demo.sh  render_demo_assets.py
site/: index.html  styles.css
tests/: test_adoption_recipes.py  test_answer_length_cli.py  test_api_contract.py  test_baseline_manifest.py  test_benchmarks.py  test_comparison.py  test_config.py  test_control_plane.py  test_demo.py  test_engine.py  test_evaluator_depth.py  test_evaluator_drift.py  test_external_metrics.py  test_github_workflows.py  test_http_adapter.py  test_loader.py  test_local_release.py  test_openai_provider.py  test_opentelemetry_adapter.py  test_pilot.py  test_plugins_and_traces.py  test_pr_comment_publisher.py  test_provenance_diagnosis.py  test_provider_metric_adapters.py  test_public_api.py  test_readme_visuals.py  test_reference_agent.py  test_reference_benchmark.py  test_release_version.py  test_repeated_runs.py  test_response_fixtures.py  test_scenario_v02_and_attacks.py  test_schema_files.py  test_sequential_gate.py  test_showcase_site.py  test_statistical_gate.py  test_statistical_schema_instances.py  test_store_and_html.py  test_team_workflow.py  test_workbench.py
(+207 files in other folders)
