[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ragops"
version = "2.2.0"
description = "Evaluation and red-team release gates for RAG and agent systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Thang Luu" }]
keywords = ["rag", "evaluation", "ai-agents", "release-gates", "regression-testing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/thangldw/ragops"
Documentation = "https://github.com/thangldw/ragops#readme"
Issues = "https://github.com/thangldw/ragops/issues"
Changelog = "https://github.com/thangldw/ragops/blob/main/CHANGELOG.md"

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn>=0.30"]
dev = ["pytest>=8.0", "ruff>=0.6", "fastapi>=0.115"]

[project.scripts]
ragops = "ragops.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ragops"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-p no:pytest_playwright"

[tool.ruff]
line-length = 100
target-version = "py311"
